<resources>
    <string name="app_name">K22411CSampleProject</string>
    <string name="title_login_user_name">User name</string>
    <string name="title_login_user_name_hint">Enter your user name</string>
    <string name="title_login_password">Password</string>
    <string name="title_login_save_login_infor">Save login infor</string>
    <string name="title_login_button_login">Login</string>
    <string name="confirm_exit_title">Exit confirmation</string>
    <string name="confirm_exit_message">Are you sure you want to exit?</string>
    <string name="confirm_exit_yes">Yes</string>
    <string name="confirm_exit_no">No</string>

    <!--    not use-->
    <string name="title_employee">Employee</string>
    <string name="title_customer">Customer</string>
    <string name="title_employee_management">Employee Management</string>
    <string name="id_label">ID:</string>
    <string name="name_label">Name:</string>
    <string name="email_label">Email:</string>
    <string name="phone_label">Phone:</string>
    <string name="title_healthcare">Health Care</string>
    <string name="title_salary">Salary</string>
    <string name="title_employee_healthcare">Employee Healthcare</string>
    <string name="title_height">Height:</string>
    <string name="title_weight">Weight:</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_slim">Slim</string>
    <string name="title_normal">Normal</string>
    <string name="title_fat">Fat</string>
    <string name="title_category" />
    <string name="title_category_list">Category</string>
    <string name="title_product">Product</string>
    <string name="title_advanced_product">Advanced Product</string>
    <string name="title_new_customer">New Customer</string>
    <string name="title_broadcast_advertising">Broadcast Advertising</string>
    <string name="title_help">Help</string>
    <string name="title_customer_detail">Customer detail</string>
    <string name="title_customer_id">Customer ID:</string>
    <string name="title_customer_name">Customer Name:</string>
    <string name="title_customer_email">Customer Email:</string>
    <string name="title_customer_phone">Customer Phone:</string>
    <string name="title_new">New</string>
    <string name="title_save">Save</string>
    <string name="title_remove">Remove</string>
    <string name="menu_new_product">New Product</string>
    <string name="menu_product_broadcast_advertising">Broadcast Advertising</string>
    <string name="menu_product_help">Help</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="title_product_id">Product ID:</string>
    <string name="title_product_name">Product Name:</string>
    <string name="title_product_quantity">Product quantity:</string>
    <string name="title_product_price">Product Price:</string>
    <string name="title_product_cate_id">Product Cate ID:</string>
    <string name="title_product_description">Product Description:</string>
    <string name="title_product_img">Product Image:</string>
    <string name="title_product_img_id">Product Image ID:</string>
    <string name="msg_new_product">Mở màn hình thêm mới sản phẩm</string>
    <string name="msg_broadcast_advertising">Mở màn hình quảng cáo</string>
    <string name="msg_help">Mở website hướng dẫn sử dụng</string>
    <!-- New-->
    <string name="title_menu_list_products_new">Add</string>
    <string name="title_menu_list_products_about">About</string>
    <string name="title_products_id">Product ID:</string>
    <string name="title_products_code">Product Code:</string>
    <string name="title_products_name">Product Name:</string>
    <string name="title_products_price">Product Price:</string>
    <string name="title_product_image"></string>
    <string name="title_payment_method">Payment Method</string>
    <string name="title_order">Order</string>

    <!-- Order Detail Item-->
    <string name="order_detail_productID">Product ID: </string>
    <string name="order_detail_quantity">Quantity: </string>
    <string name="order_detail_price">Price: </string>
    <string name="order_detail_discount">Discount: </string>
    <string name="order_detail_VAT">VAT: </string>
    <string name="order_detail_total_value">Total Value: </string>
    <string name="title_telephony">Telephony</string>
    <string name="title_contact_name">Contact Name</string>
    <string name="title_phone_number">Phone number</string>
    <string name="title_sms_body">Body</string>
    <string name="title_filter_Viettel">Viettel</string>
    <string name="title_filter_mobilephone">Mobilephone</string>
    <string name="title_filter_other">Others</string>
    <string name="title_filter_all">All</string>


</resources>