<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_new_product"
        android:enabled="true"
        android:visible="true"
        android:title="@string/menu_new_product"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_product_broadcast_advertising"
        android:enabled="true"
        android:visible="true"
        app:showAsAction="never"
        android:title="@string/menu_product_broadcast_advertising" />
    <item
        android:id="@+id/menu_product_help"
        android:enabled="true"
        android:visible="true"
        app:showAsAction="never"
        android:title="@string/menu_product_help" />
</menu>