<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SendSMSActivity">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_contact_name"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtTelephonyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#4CAF50"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_phone_number"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#4CAF50"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:text="@string/title_sms_body"
        android:textAlignment="center"
        android:textColor="#F6F6F6"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:singleLine="true"
        android:text="Helo Helo Helo Helo Helo Helo Helo Helo Helo Helo Helo Helo Helo Helo Helo " />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_sms1"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_sms1" />

        <ImageView
            android:id="@+id/img_sms2"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_sms2" />
    </LinearLayout>
</LinearLayout>