<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical">

    <!-- RecyclerView để hiển thị danh sách nhân viên -->

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/title_employee_management"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TableLayout
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imgEmployeeHealthcare"
                    android:layout_width="match_parent"
                    android:layout_height="173dp"
                    android:onClick="open_employee_healthcare"
                    app:srcCompat="@mipmap/ic_employee_healthcare" />

                <TextView
                    android:id="@+id/txtEmployeeHealthcare"
                    android:onClick="open_employee_healthcare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_healthcare"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="139dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgSalary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_salary" />

                <TextView
                    android:id="@+id/txtSalary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_salary"
                    android:textAlignment="center" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

</LinearLayout>